[package]
name = "brainfuck-llvm"
version = "0.1.0"
authors = ["Rein F <public@reinfernhout.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = {git = "https://github.com/Cerberuser/indoc", branch = "printdoc"}
regex = "1.3.9"
